tdf#163362: write xlink:href in image:images, image:bitmap-index in image:entry

Those were mandatory prior to commit d367ee2f8c204f351072c0eb10259fd7aa497770,
and still mandatory e.g. in AOO. Restore writing those, for interoperability
and backward compatibility.

Change-Id: I84f33e13e6bade8b2f2dd0cc5e2e0f4a96d50e84
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174721
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>