framework/source/xml/imagesdocumenthandler.cxx
@@ -50,6 +50,7 @@ constexpr OUString ELEMENT_NS_ENTRY = u"image:entry"_ustr;
 constexpr OUStringLiteral ATTRIBUTE_XMLNS_IMAGE = u"xmlns:image";
 constexpr OUStringLiteral ATTRIBUTE_XMLNS_XLINK = u"xmlns:xlink";
 
+constexpr OUString ATTRIBUTE_XLINK_HREF = u"xlink:href"_ustr;
 constexpr OUStringLiteral ATTRIBUTE_XLINK_TYPE = u"xlink:type";
 constexpr OUStringLiteral ATTRIBUTE_XLINK_TYPE_VALUE = u"simple";
 
@@ -212,7 +213,7 @@ void SAL_CALL OReadImagesDocumentHandler::startElement(
                 throw SAXException( aErrorMessage, Reference< XInterface >(), Any() );
             }
 
-            m_rImageList.push_back( aItem );
+            m_rImageList.aImageItemDescriptors.push_back(aItem);
         }
         break;
 
@@ -335,10 +336,12 @@ void OWriteImagesDocumentHandler::WriteImageList( const ImageItemDescriptorList*
     pList->AddAttribute( m_aAttributeXlinkType,
                          m_aAttributeValueSimple );
 
+    pList->AddAttribute(ATTRIBUTE_XLINK_HREF, pImageList->aURL);
+
     m_xWriteDocumentHandler->startElement( ELEMENT_NS_IMAGES, pList );
     m_xWriteDocumentHandler->ignorableWhitespace( OUString() );
 
-    for (const ImageItemDescriptor & i : *pImageList)
+    for (const ImageItemDescriptor & i : pImageList->aImageItemDescriptors)
         WriteImage( &i );
 
     m_xWriteDocumentHandler->endElement( ELEMENT_NS_IMAGES );
@@ -348,6 +351,8 @@ void OWriteImagesDocumentHandler::WriteImageList( const ImageItemDescriptorList*
 void OWriteImagesDocumentHandler::WriteImage( const ImageItemDescriptor* pImage )
 {
     rtl::Reference<::comphelper::AttributeList> pList = new ::comphelper::AttributeList;
+
+    pList->AddAttribute(m_aXMLImageNS + ATTRIBUTE_BITMAPINDEX, OUString::number(pImage->nIndex));
 
     pList->AddAttribute( m_aXMLImageNS + ATTRIBUTE_COMMAND,
                          pImage->aCommandURL );
